--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,11 +4,8 @@
 name: Publish on private NPM registry
 
 on:
-  push:
-    tags:
-      - v*
+  workflow_dispatch:
     
-
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
@@ -20,6 +17,6 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: npm install
       - run: npm run build
-      - run: npm publish
+      - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
