--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rawgraphs/rawgraphs-charts",
+  "name": "@weiwhy/rawgraphs-charts",
   "version": "v1.0.1",
   "description": "RAWGRAPHS charts",
   "jsdelivr": "lib/index.umd.js",
