--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@babel/register": "^7.16.0",
-    "@rawgraphs/rawgraphs-core": "^1.0.0-beta.16",
+    "@weiwhy/rawgraphs-core": "^1.0.0-beta.16",
     "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-image": "^2.0.5",
